--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 buildDynamically("./config.ini")
