impl swerve no optimization

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [SwerveDrive]
-build_dynamically = on
+build_dynamically = true
 github = https://github.com/PinewoodRobotics/SwerveDrive.git
 branch = godbrigero
