--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'com.github.PinewoodRobotics:PWRUPCore:-SNAPSHOT'
 }
 
 buildDynamically("./config.ini")
