--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,14 @@ lib/vendor/*
 lib/build/*
 lib/*
 lib
+
+### Node.js ###
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+.DS_Store
+coverage/
+.nyc_output
