add more base stuff that may come up including the autobahn and raspberry pi connection as well as logger

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,6 @@
     }
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
-  "python.analysis.typeCheckingMode": "basic"
+  "python.analysis.typeCheckingMode": "basic",
+  "cursorpyright.analysis.typeCheckingMode": "basic"
 }
