--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,15 @@ build_dynamically = true
 github = https://github.com/PinewoodRobotics/PWRUPCore.git
 branch = main
 force_clone = false
+
+[autobahn_client]
+build_dynamically = true
+github = https://github.com/godbrigero/autobahn_client.git
+branch = main
+force_clone = false
+
+[SwerveDrive]
+build_dynamically = true
+github = https://github.com/PinewoodRobotics/SwerveDrive.git
+branch = main
+force_clone = false
