update to house updated command base robot structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,25 @@
-zeroconf==0.147.0
-fix-protobuf-imports==0.1.7
+--find-links https://tortall.net/~robotpy/wheels/2023/raspbian/
+--prefer-binary
+
+asyncio
+autobahn_client
+colorama
+dataclasses
+filterpy
+fix-protobuf-imports
+flask
+netifaces
+numpy
+peewee
+protobuf
+psutil
+pyapriltags
+pydantic
 pytest
-typing-extensions
+robotpy-cscore
+scipy
+zeroconf
+thrift
+opencv-python
+requests
+ultralytics
