--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "**/.factorypath": true,
     "**/*~": true
   },
+  "editor.autoClosingBrackets": "never",
   "java.test.config": [
     {
       "name": "WPIlibUnitTests",
