add some examples and update more

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,10 @@
 [env]
+# path to the protobuf files. On the backend, this is predefined to be a different path.
+# in general, the rust uses this flag to determine where the compilable proto files are located during the build process.
 PROTO_ROOT_PATH = "src/proto/"
 
+# path to the thrift files. On the backend, this is predefined to be a different path.
+# in general, the rust uses this flag to determine where the compilable thrift files are located during the build process.
 THRIFT_ROOT_PATH = "ThriftTsConfig/schema/"
 THRIFT_ROOT_FILE = "config.thrift"
 
