add more comments

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,18 @@
+# Common features that are generalized. Like a "util" thing.
 [PWRUPCore]
 build_dynamically = true
 github = https://github.com/PinewoodRobotics/PWRUPCore.git
 branch = main
 force_clone = false
 
+# Very required in order to connect to the raspberry pi network.
 [autobahn_client]
 build_dynamically = true
 github = https://github.com/godbrigero/autobahn_client.git
 branch = main
 force_clone = false
 
+# Swerve drive library for the robot. homebrewed and ONLY PROVIDES MATH
 [SwerveDrive]
 build_dynamically = true
 github = https://github.com/PinewoodRobotics/SwerveDrive.git
