--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     implementation "com.google.protobuf:protobuf-java:3.22.2"
 
+    // Math utilities for CustomMath matrix operations
+    implementation 'org.ejml:ejml-all:0.41'
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
